[package]
name = "hello-rust"
version = "0.1.0"
authors = ["xuzhongqiang"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.6", features = ["setupapi", "guiddef", "devguid", "errhandlingapi", "cguid", "usbiodef", "hidclass", "winerror", "devpkey"] }
regex = "1"